Expected Outcomes and Significance filled out

--- a/group_project_proposal.ipynb
+++ b/group_project_proposal.ipynb
@@ -396,7 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#rename the columns to make them readable"
+    "#rename the columns to make them readable\n"
    ]
   },
   {
@@ -697,7 +697,22 @@
     "\n",
     "##### **Methods**\n",
     "\n",
-    "##### **Expected Outcomes and Significance**"
+    "<!-- Explain how you will conduct either your data analysis and which variables/columns you will use. Note - you do not need to use all variables/columns that exist in the raw data set. In fact, that's often not a good idea. For each variable think: is this a useful variable for prediction?\n",
+    "Describe at least one way that you will visualize the results -->\n",
+    "\n",
+    "\n",
+    "\n",
+    "##### **Expected Outcomes and Significance**\n",
+    "\n",
+    "<!-- What do you expect to find?\n",
+    "What impact could such findings have?\n",
+    "What future questions could this lead to? -->\n",
+    "\n",
+    "Since many inedible mushrooms differ from edible mushrooms in physical features, habitat and population distribution, it is expected that we may produce a model able to predict whether a mushroom is edible from the above variables with a reasonable accuracy rate.\n",
+    "\n",
+    "While preforming a chemical-based test on a mushroom would likely produce a more accurate result, it requires access to the physical mushroom and would be impossible without the sample. Thus, our model could be useful in predicting the edibility of a mushroom in situations with these limitations.\n",
+    "\n",
+    "Mushrooms have many different types of toxins, and it would not be unreasonable to imagine that mushrooms producing different toxins will be observed to be different. Future studies may explore the relationship between edibility and observations further by training for different toxins, which may also produce more accurate and consistent predictions."
    ]
   }
  ],
