--- a/group_project_proposal.ipynb
+++ b/group_project_proposal.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "##### **Introduction**\n",
     "\n",
-    "Mushrooms have been a part of our diet for centuries; however, not all mushrooms are safe for consumption.  Any person familiar with the outdoors knows not to eat any mushroom in the wild as many mushroom species produce toxic substances and the consumption of some can even be fatal. There is no single trait that can differentiate all edible mushrooms from the poisonous ones. From this dataset of known edible and poisonous mushrooms, we wish to train a model that can help predict whether a mushroom is edible or poisonous from their physical features, population, and habitat."
+    "Mushrooms have been a part of our diet for centuries; however, not all mushrooms are safe for consumption. Anyone familiar with the outdoors knows to avoid exploration in eating mushrooms they are unfamilar with, as many mushroom species produce toxic substances resulting in the consumption of some to be even fatal. \n",
+    "\n",
+    "There is no single trait that can differentiate all edible mushrooms from the poisonous ones. From this dataset of known edible and poisonous mushrooms, we wish to train a model that can help predict whether a mushroom is edible or poisonous from their physical features, population characteristics, and habitat."
    ]
   },
   {
@@ -410,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +785,7 @@
        "[8123 rows x 23 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +821,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -828,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1012,7 @@
        "[4 rows x 22 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1049,13 +1050,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-2e09f5ec1cf14774becb413af8633bef\"></div>\n",
+       "<div id=\"altair-viz-ae4c05607456461ab1bfab1ff695b942\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-2e09f5ec1cf14774becb413af8633bef\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-2e09f5ec1cf14774becb413af8633bef\");\n",
+       "    if (outputDiv.id !== \"altair-viz-ae4c05607456461ab1bfab1ff695b942\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-ae4c05607456461ab1bfab1ff695b942\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -1108,7 +1109,7 @@
        "alt.RepeatChart(...)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
