--- a/group_project_proposal.ipynb
+++ b/group_project_proposal.ipynb
@@ -1129,6 +1129,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1139,6 +1140,16 @@
     "<!-- Explain how you will conduct either your data analysis and which variables/columns you will use. Note - you do not need to use all variables/columns that exist in the raw data set. In fact, that's often not a good idea. For each variable think: is this a useful variable for prediction?\n",
     "Describe at least one way that you will visualize the results -->\n",
     "\n",
+    "First, we have split the dataset into training and testing and tidied the data and done some preliminary data analysis to see which features we should include in our model and the spread of our dataset. \n",
+    "\n",
+    "\n",
+    "We will exclude features that only have one variable like the veil_type feature since all of the other features have more than one possibility, so we will be using all of the varibles and columns (except veil_type) in our analysis. \n",
+    " \n",
+    "\n",
+    "Since we are trying to create a model to determine if a model is edible or poisonous, we have a classification problem. We will compare the metrics of two classification algorithms - SVM (support vector machine) and k-nearest neighbours and choose the better modelling algorithm. Then, we will do hyperparameter optimization on the better classifier to choose the best hyperparameters for our model using GridSearch. Next, we will fit our training data on the best model from our optimization and score our model using the test dataset.\n",
+    " \n",
+    "\n",
+    "We will visualize the results/model using a scatterplot.\n",
     "\n",
     "\n",
     "##### **Expected Outcomes and Significance**\n",
@@ -1147,12 +1158,17 @@
     "What impact could such findings have?\n",
     "What future questions could this lead to? -->\n",
     "\n",
-    "Since many inedible mushrooms differ from edible mushrooms in physical features, habitat and population distribution, it is expected that we may produce a model able to predict whether a mushroom is edible from the above variables with a reasonable accuracy rate.\n",
+    "Since many inedible mushrooms differ from edible mushrooms in physical features, habitat and population distribution, it is expected that we may produce a model able to predict whether a mushroom is edible from the above variables with a reasonable accuracy & recall score.\n",
     "\n",
     "While preforming a chemical-based test on a mushroom would likely produce a more accurate result, it requires access to the physical mushroom and would be impossible without the sample. Thus, our model could be useful in predicting the edibility of a mushroom in situations with these limitations.\n",
     "\n",
-    "Mushrooms have many different types of toxins, and it would not be unreasonable to imagine that mushrooms producing different toxins will be observed to be different. Future studies may explore the relationship between edibility and observations further by training for different toxins, which may also produce more accurate and consistent predictions."
+    "Mushrooms have many different types of toxins, and it would not be unreasonable to imagine that mushrooms producing different toxins will be observed to be different. Future studies may explore the relationship between edibility and observations further by training for different toxins, which may also produce more accurate and consistent predictions. Furthermore, we can analyze other similarities shared between the poisonous mushrooms to see if other factors like phylogenetic relatedness can affect their edibility."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
