--- a/group_project_proposal.ipynb
+++ b/group_project_proposal.ipynb
@@ -395,15 +395,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#rename the columns to make them readable\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1146,7 +1137,7 @@
     "We will exclude features that only have one variable like the veil_type feature since all of the other features have more than one possibility, so we will be using all of the varibles and columns (except veil_type) in our analysis. \n",
     " \n",
     "\n",
-    "Since we are trying to create a model to determine if a model is edible or poisonous, we have a classification problem. We will compare the metrics of two classification algorithms - SVM (support vector machine) and k-nearest neighbours and choose the better modelling algorithm. Then, we will do hyperparameter optimization on the better classifier to choose the best hyperparameters for our model using GridSearch. Next, we will fit our training data on the best model from our optimization and score our model using the test dataset.\n",
+    "Since we are trying to create a model to determine if a model is edible or poisonous, we have a classification problem. We will compare/cross-validate the metrics of two classification algorithms - SVM (support vector machine) and k-nearest neighbours and choose the better modelling algorithm. Then, we will do hyperparameter optimization on the better classifier to choose the best hyperparameters for our model using GridSearch. Next, we will fit our training data on the best model from our optimization and score our model using the test dataset.\n",
     " \n",
     "\n",
     "We will visualize the results/model using a scatterplot.\n",
