--- a/project.ipynb
+++ b/project.ipynb
@@ -22,9 +22,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'catboost'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcompose\u001b[39;00m \u001b[39mimport\u001b[39;00m ColumnTransformer, make_column_transformer\n\u001b[0;32m----> 8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcatboost\u001b[39;00m \u001b[39mimport\u001b[39;00m CatBoostClassifier\n\u001b[1;32m      9\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlightgbm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msklearn\u001b[39;00m \u001b[39mimport\u001b[39;00m LGBMClassifier\n\u001b[1;32m     10\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mxgboost\u001b[39;00m \u001b[39mimport\u001b[39;00m XGBClassifier\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'catboost'"
+     ]
+    }
+   ],
    "source": [
     "# Import required packages\n",
     "import pandas as pd\n",
@@ -33,6 +45,9 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn.compose import ColumnTransformer, make_column_transformer\n",
+    "from catboost import CatBoostClassifier\n",
+    "from lightgbm.sklearn import LGBMClassifier\n",
+    "from xgboost import XGBClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -747,6 +762,104 @@
     "        repeat= list(X_train.columns), \n",
     "        columns=5\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_feats = [\"cap_shape\", \"cap_surface\", \"cap_colour\", \"stalk_root\", \"stalk_surface_above_ring\", \"stalk_surface_below_ring\", \"stalk_colour_above_ring\", \"stalk_colour_below_ring\", \"veil_colour\", \"ring_type\", \"spore_print_colour\", \"population\", \"habitat\"]\n",
+    "ordinal_feats = [\"ring_number\"]\n",
+    "binary_feats = [\"bruises\", \"gill_attachment\", \"gill_spacing\", \"gill_size\", \"stalk_shape\"]\n",
+    "drop_feats = [\"veil_type\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>ColumnTransformer(transformers=[(&#x27;onehotencoder-1&#x27;,\n",
+       "                                 OneHotEncoder(handle_unknown=&#x27;ignore&#x27;,\n",
+       "                                               sparse_output=False),\n",
+       "                                 [&#x27;cap_shape&#x27;, &#x27;cap_surface&#x27;, &#x27;cap_colour&#x27;,\n",
+       "                                  &#x27;stalk_root&#x27;, &#x27;stalk_surface_above_ring&#x27;,\n",
+       "                                  &#x27;stalk_surface_below_ring&#x27;,\n",
+       "                                  &#x27;stalk_colour_above_ring&#x27;,\n",
+       "                                  &#x27;stalk_colour_below_ring&#x27;, &#x27;veil_colour&#x27;,\n",
+       "                                  &#x27;ring_type&#x27;, &#x27;spore_print_colour&#x27;,\n",
+       "                                  &#x27;population&#x27;, &#x27;habitat&#x27;]),\n",
+       "                                (&#x27;ordinalencoder&#x27;,\n",
+       "                                 OrdinalEncoder(categories=[&#x27;n&#x27;, &#x27;o&#x27;, &#x27;t&#x27;],\n",
+       "                                                dtype=&lt;class &#x27;int&#x27;&gt;),\n",
+       "                                 [&#x27;ring_number&#x27;]),\n",
+       "                                (&#x27;onehotencoder-2&#x27;,\n",
+       "                                 OneHotEncoder(drop=&#x27;if_binary&#x27;,\n",
+       "                                               dtype=&lt;class &#x27;int&#x27;&gt;),\n",
+       "                                 [&#x27;bruises&#x27;, &#x27;gill_attachment&#x27;, &#x27;gill_spacing&#x27;,\n",
+       "                                  &#x27;gill_size&#x27;, &#x27;stalk_shape&#x27;]),\n",
+       "                                (&#x27;drop&#x27;, &#x27;drop&#x27;, [&#x27;veil_type&#x27;])])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">ColumnTransformer</label><div class=\"sk-toggleable__content\"><pre>ColumnTransformer(transformers=[(&#x27;onehotencoder-1&#x27;,\n",
+       "                                 OneHotEncoder(handle_unknown=&#x27;ignore&#x27;,\n",
+       "                                               sparse_output=False),\n",
+       "                                 [&#x27;cap_shape&#x27;, &#x27;cap_surface&#x27;, &#x27;cap_colour&#x27;,\n",
+       "                                  &#x27;stalk_root&#x27;, &#x27;stalk_surface_above_ring&#x27;,\n",
+       "                                  &#x27;stalk_surface_below_ring&#x27;,\n",
+       "                                  &#x27;stalk_colour_above_ring&#x27;,\n",
+       "                                  &#x27;stalk_colour_below_ring&#x27;, &#x27;veil_colour&#x27;,\n",
+       "                                  &#x27;ring_type&#x27;, &#x27;spore_print_colour&#x27;,\n",
+       "                                  &#x27;population&#x27;, &#x27;habitat&#x27;]),\n",
+       "                                (&#x27;ordinalencoder&#x27;,\n",
+       "                                 OrdinalEncoder(categories=[&#x27;n&#x27;, &#x27;o&#x27;, &#x27;t&#x27;],\n",
+       "                                                dtype=&lt;class &#x27;int&#x27;&gt;),\n",
+       "                                 [&#x27;ring_number&#x27;]),\n",
+       "                                (&#x27;onehotencoder-2&#x27;,\n",
+       "                                 OneHotEncoder(drop=&#x27;if_binary&#x27;,\n",
+       "                                               dtype=&lt;class &#x27;int&#x27;&gt;),\n",
+       "                                 [&#x27;bruises&#x27;, &#x27;gill_attachment&#x27;, &#x27;gill_spacing&#x27;,\n",
+       "                                  &#x27;gill_size&#x27;, &#x27;stalk_shape&#x27;]),\n",
+       "                                (&#x27;drop&#x27;, &#x27;drop&#x27;, [&#x27;veil_type&#x27;])])</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">onehotencoder-1</label><div class=\"sk-toggleable__content\"><pre>[&#x27;cap_shape&#x27;, &#x27;cap_surface&#x27;, &#x27;cap_colour&#x27;, &#x27;stalk_root&#x27;, &#x27;stalk_surface_above_ring&#x27;, &#x27;stalk_surface_below_ring&#x27;, &#x27;stalk_colour_above_ring&#x27;, &#x27;stalk_colour_below_ring&#x27;, &#x27;veil_colour&#x27;, &#x27;ring_type&#x27;, &#x27;spore_print_colour&#x27;, &#x27;population&#x27;, &#x27;habitat&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">OneHotEncoder</label><div class=\"sk-toggleable__content\"><pre>OneHotEncoder(handle_unknown=&#x27;ignore&#x27;, sparse_output=False)</pre></div></div></div></div></div></div><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">ordinalencoder</label><div class=\"sk-toggleable__content\"><pre>[&#x27;ring_number&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" ><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">OrdinalEncoder</label><div class=\"sk-toggleable__content\"><pre>OrdinalEncoder(categories=[&#x27;n&#x27;, &#x27;o&#x27;, &#x27;t&#x27;], dtype=&lt;class &#x27;int&#x27;&gt;)</pre></div></div></div></div></div></div><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" ><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">onehotencoder-2</label><div class=\"sk-toggleable__content\"><pre>[&#x27;bruises&#x27;, &#x27;gill_attachment&#x27;, &#x27;gill_spacing&#x27;, &#x27;gill_size&#x27;, &#x27;stalk_shape&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-7\" type=\"checkbox\" ><label for=\"sk-estimator-id-7\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">OneHotEncoder</label><div class=\"sk-toggleable__content\"><pre>OneHotEncoder(drop=&#x27;if_binary&#x27;, dtype=&lt;class &#x27;int&#x27;&gt;)</pre></div></div></div></div></div></div><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-8\" type=\"checkbox\" ><label for=\"sk-estimator-id-8\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">drop</label><div class=\"sk-toggleable__content\"><pre>[&#x27;veil_type&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-9\" type=\"checkbox\" ><label for=\"sk-estimator-id-9\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">drop</label><div class=\"sk-toggleable__content\"><pre>drop</pre></div></div></div></div></div></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "ColumnTransformer(transformers=[('onehotencoder-1',\n",
+       "                                 OneHotEncoder(handle_unknown='ignore',\n",
+       "                                               sparse_output=False),\n",
+       "                                 ['cap_shape', 'cap_surface', 'cap_colour',\n",
+       "                                  'stalk_root', 'stalk_surface_above_ring',\n",
+       "                                  'stalk_surface_below_ring',\n",
+       "                                  'stalk_colour_above_ring',\n",
+       "                                  'stalk_colour_below_ring', 'veil_colour',\n",
+       "                                  'ring_type', 'spore_print_colour',\n",
+       "                                  'population', 'habitat']),\n",
+       "                                ('ordinalencoder',\n",
+       "                                 OrdinalEncoder(categories=['n', 'o', 't'],\n",
+       "                                                dtype=<class 'int'>),\n",
+       "                                 ['ring_number']),\n",
+       "                                ('onehotencoder-2',\n",
+       "                                 OneHotEncoder(drop='if_binary',\n",
+       "                                               dtype=<class 'int'>),\n",
+       "                                 ['bruises', 'gill_attachment', 'gill_spacing',\n",
+       "                                  'gill_size', 'stalk_shape']),\n",
+       "                                ('drop', 'drop', ['veil_type'])])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ct = make_column_transformer(\n",
+    "    (OneHotEncoder(handle_unknown=\"ignore\", sparse_output=False), categorical_feats),\n",
+    "    (OrdinalEncoder(categories=[\"n\", \"o\", \"t\"], dtype=int), ordinal_feats),\n",
+    "    (OneHotEncoder(drop=\"if_binary\", dtype=int), binary_feats),\n",
+    "    (\"drop\", drop_feats),\n",
+    ")\n",
+    "ct"
    ]
   },
   {
