labeled some figures

--- a/project.ipynb
+++ b/project.ipynb
@@ -1320,7 +1320,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As cen be seen above, there is only one possible observation for veil types, making it not a useful prediction variable. Hence, we will not use it in our model. This also marks the end of preliminary data analysis, and we begin taking steps to build our model."
+    "**Figure 1.0**\n",
+    "\n",
+    "Plot matrix of the variables availible in the dataset other than the variable we plan to predict: class."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As can be seen above, there is only one possible observation for veil types, making it not a useful prediction variable. Hence, we will not use it in our model. This also marks the end of preliminary data analysis, and we begin taking steps to build our model."
    ]
   },
   {
@@ -2894,6 +2903,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Figure 2.0**\n",
+    "\n",
+    "Number of observations of the variable 'cap_colour' for each category of the predicted variable: class. Notice the severe imbalance in the sub-types *r* and *u*."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -3134,6 +3152,15 @@
     "                .properties(width = 150, height = 150)\n",
     ")\n",
     "habitat_plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Figure 2.1**\n",
+    "\n",
+    "Number of observations of the variable 'cap_colour' for each category of the predicted variable: class. Notice the severe imbalance in the sub-type *w*, and milder imbalance in the subtypes *m* and *p*."
    ]
   },
   {
@@ -3893,6 +3920,17 @@
     "confusion = ConfusionMatrixDisplay.from_estimator(\n",
     "    pipe, X_train, y_train, display_labels = [\"Edible\", \"Poisonous\"]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Figure 2.3**\n",
+    "\n",
+    "Confusion matrix of the model on the training data. \n",
+    "\n",
+    "This high value is to be expected and is even concerning: since this is the data it was trained with, it likely will not behave this well against the testing data, and this is likely due to overfitting. However, after all the different things we have tried, we believe this strange behavior is due to the dataset itself, and we predict that the model will still predict accuractly even against the testing data."
    ]
   },
   {
