added figure names and descriptions

--- a/project.ipynb
+++ b/project.ipynb
@@ -2800,9 +2800,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To visualize how each feature affected the accuracy, we plotted the occurrences of the observation types with our predicted observations of edible or poisonous. First, we test cap colour, to check if it will be a good predictor.\n",
-    "\n",
-    "In both cap colour and habitat, as will be seen below, we see variables which exist only for one sub-type, making them bad predictors. Hence, we will remove both variables from our model.\n"
+    "To visualize how each feature affected the accuracy, we plotted the occurrences of the observation types with our predicted observations of edible or poisonous. First, we test cap colour, to check if it will be a good predictor.\n"
    ]
   },
   {
@@ -3160,7 +3158,9 @@
    "source": [
     "**Figure 2.1**\n",
     "\n",
-    "Number of observations of the variable 'cap_colour' for each category of the predicted variable: class. Notice the severe imbalance in the sub-type *w*, and milder imbalance in the subtypes *m* and *p*."
+    "Number of observations of the variable 'cap_colour' for each category of the predicted variable: class. Notice the severe imbalance in the sub-type *w*, and milder imbalance in the subtypes *m* and *p*.\n",
+    "\n",
+    "In both cap colour and habitat, as will be seen below, we see variables which exist only for one sub-type, making them bad predictors. Hence, we will remove both variables from our model."
    ]
   },
   {
@@ -5038,6 +5038,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Figure 2.4**\n",
+    "\n",
+    "The effect of the number of k-neighbors on the mean accuracy of the test.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
@@ -5112,6 +5121,19 @@
    ],
    "source": [
     "recall_versus_k_grid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Figure 2.5**\n",
+    "\n",
+    "The effect of the number of k-neighbors on the mean recall of the test. \n",
+    "\n",
+    "Arguably, this is the more important metric for our model as the small amounts of toxins needed to experience adverse effects found in mushrooms make it detrimental to classify a poisonous mushroom as being edible, with much less of an impact on the other outcome: mistaking an edible mushroom to be poisonous, whereupon perhaps one good mushroom is wasted (Jo, 2014). Due to this, we would rather the model be on the safer side when classifying poisonous mushrooms; this will cause more error but should result in what we believe to be the better model.\n",
+    "\n",
+    "Both seems to agree on the most effective number of neighbors though, making it unecessary to determine the more important of the two.\n"
    ]
   },
   {
@@ -5246,7 +5268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SCORE OUR MODEL!!"
+    "Next, we score our model."
    ]
   },
   {
@@ -5289,6 +5311,17 @@
     "test_confusion = ConfusionMatrixDisplay.from_estimator(\n",
     "    best_knn, X_test, y_test, display_labels = [\"Edible\", \"Poisonous\"]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Figure 3.0**\n",
+    "\n",
+    "Our model has scored 100% in predicting the edibility of mushrooms in the test set. \n",
+    "\n",
+    "Generally speaking, this is mildly alarming, as models are generally not suppsoed to be this accurate, but due to the fact that the model has never before seen this test set and achieved similar results on the training set, it can be seen that this is likely some odd function of the dataset as a whole, rather than our model."
    ]
   },
   {
